src/expr/src/scalar/func/snapshots/mz_expr__scalar__func__macros__test__fallible3.snap
---
source: src/expr/src/scalar/func/macros.rs
expression: "#[sqlfunc()]\nfn fallible3(a: f32) -> Result<Option<f32>, EvalError> {\n    Ok(Some(a))\n}\n"
---
#[derive(
    proptest_derive::Arbitrary,
    Ord,
    PartialOrd,
    Clone,
    Debug,
    Eq,
    PartialEq,
    serde::Serialize,
    serde::Deserialize,
    Hash,
    mz_lowertest::MzReflect
)]
pub struct Fallible3;
impl crate::func::EagerUnaryFunc for Fallible3 {
    type Input<'a> = f32;
    type Output<'a> = Result<Option<f32>, EvalError>;
    fn call<'a>(&self, a: Self::Input<'a>) -> Self::Output<'a> {
        fallible3(a)
    }
    fn output_type(&self, input_type: mz_repr::SqlColumnType) -> mz_repr::SqlColumnType {
        use mz_repr::AsColumnType;
        let output = Self::Output::as_column_type();
        let propagates_nulls = crate::func::EagerUnaryFunc::propagates_nulls(self);
        let nullable = output.nullable;
        output.nullable(nullable || (propagates_nulls && input_type.nullable))
    }
}
impl std::fmt::Display for Fallible3 {
    fn fmt(&self, f: &mut std::fmt::Formatter) -> std::fmt::Result {
        f.write_str(stringify!(fallible3))
    }
}
fn fallible3(a: f32) -> Result<Option<f32>, EvalError> {
    Ok(Some(a))
}
