src/expr/src/scalar/func/snapshots/mz_expr__scalar__func__macros__test__infallible1.snap
---
source: src/expr/src/scalar/func/macros.rs
expression: "#[sqlfunc(sqlname = \"INFALLIBLE\")]\nfn infallible1(a: f32) -> f32 {\n    a\n}\n"
---
#[derive(
    proptest_derive::Arbitrary,
    Ord,
    PartialOrd,
    Clone,
    Debug,
    Eq,
    PartialEq,
    serde::Serialize,
    serde::Deserialize,
    Hash,
    mz_lowertest::MzReflect
)]
pub struct Infallible1;
impl crate::func::EagerUnaryFunc for Infallible1 {
    type Input<'a> = f32;
    type Output<'a> = f32;
    fn call<'a>(&self, a: Self::Input<'a>) -> Self::Output<'a> {
        infallible1(a)
    }
    fn output_type(&self, input_type: mz_repr::SqlColumnType) -> mz_repr::SqlColumnType {
        use mz_repr::AsColumnType;
        let output = Self::Output::as_column_type();
        let propagates_nulls = crate::func::EagerUnaryFunc::propagates_nulls(self);
        let nullable = output.nullable;
        output.nullable(nullable || (propagates_nulls && input_type.nullable))
    }
}
impl std::fmt::Display for Infallible1 {
    fn fmt(&self, f: &mut std::fmt::Formatter) -> std::fmt::Result {
        f.write_str("INFALLIBLE")
    }
}
fn infallible1(a: f32) -> f32 {
    a
}
